app/bankportal-api-deployment.yaml

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bankportal-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankportal-api
  template: 
    metadata:
      labels:
        app: bankportal-api
    spec:
      containers:
        - name: bankportal-api
          image: 'rianle/bankportal-api:jdk17'
          ports:
            - containerPort: 8180
              protocol: TCP
          imagePullPolicy: IfNotPresent
