app/bankportal-api-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bankportal-api
spec:
  ports:
  - port: 8180
    targetPort: 8180
  selector:
    app: bankportal-api
