app/bankportal-ui-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bankportal-ui
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: bankportal-ui
